// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`format results are formatted as expected 1`] = `
Array [
  "run 1 	95	0.9	1.0	1.1	3.2	4.0",
]
`;

exports[`format results heading row added before first result 1`] = `
Array [
  "name  	score	FCP	FMP	SI	FCI	TTI",
  "run 1 	95	0.9	1.0	1.1	3.2	4.0",
]
`;

exports[`format results userTimingMark uses default number format precision (2 digits) 1`] = `
Array [
  "run 1 	95	0.9	1.0	1.1	3.2	4.0	1.25",
]
`;

exports[`format stats stats are formatted as expected 1`] = `
Array [
  "",
  "median	95	0.9	1.0	1.1	3.2	4.0",
]
`;

exports[`format stats stddev uses custom precision for score (1 digit) 1`] = `
Array [
  "",
  "stddev	95.0	0.9	1.0	1.1	3.2	4.0",
]
`;
